# GlitchEd25519.BlazorWebApp

./: .gitmodules  GlitchedPolygons.GlitchEd25519.BlazorWebApp.sln  README.md
.github/workflows/: azure-static-web-apps-delightful-flower-002750703.yml
GlitchedPolygons.GlitchEd25519.BlazorWebApp/: App.razor  Constants.cs  GlitchedPolygons.GlitchEd25519.BlazorWebApp.csproj  Program.cs  _Imports.razor
GlitchedPolygons.GlitchEd25519.BlazorWebApp.Qt/GlitchedPolygons.GlitchEd25519.BlazorWebApp.Qt/: CMakeLists.txt  main.cpp
GlitchedPolygons.GlitchEd25519.BlazorWebApp/ExtensionMethods/: CRC32.cs
GlitchedPolygons.GlitchEd25519.BlazorWebApp/Layout/: MainLayout.razor  NavMenu.razor  NavMenu.razor.css
GlitchedPolygons.GlitchEd25519.BlazorWebApp/Models/: UserData.cs
GlitchedPolygons.GlitchEd25519.BlazorWebApp/Pages/: Home.razor  Keygen.razor
GlitchedPolygons.GlitchEd25519.BlazorWebApp/Properties/: launchSettings.json
GlitchedPolygons.GlitchEd25519.BlazorWebApp/Services/: IUserDataService.cs  UserDataService.cs
GlitchedPolygons.GlitchEd25519.BlazorWebApp/wwwroot/: ed25519.webmanifest  index.html
GlitchedPolygons.GlitchEd25519.BlazorWebApp/wwwroot/css/: app.css  dark.css
GlitchedPolygons.GlitchEd25519.BlazorWebApp/wwwroot/js/: copybutton.js  darkness.js  keygen.js
